test/parsetest/invalid/doublezero.java
class C {
  public void foo() {
    return foo(00);
  }
}
